force-app/main/default/objects/PDF_ESignature_Field__c/PDF_ESignature_Field__c.object-meta.xml
<CustomObject>
    <description>PDF-first e-signature package object.</description>
    <label>E-Signature Field</label>
    <nameField>
        <displayFormat>PESFLD-{000000}</displayFormat>
        <label>E-Signature Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Signature Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>