force-app/main/default/objects/PDF_ESignature_Field__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>PDF_ESignature_Envelope__c</referenceTo>
    <relationshipLabel>PDF E-Signature Fields</relationshipLabel>
    <relationshipName>PDF_ESignature_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>