force-app/main/default/objects/PDF_ESignature_Field__c/fields/Page_Width_Points__c.field-meta.xml
<CustomField>
    <fullName>Page_Width_Points__c</fullName>
    <label>Page Width Points</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>