force-app/main/default/objects/PDF_ESignature_Field__c/fields/Pdf_Height__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Height__c</fullName>
    <label>PDF Height</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>