force-app/main/default/objects/PDF_ESignature_Field__c/fields/Pdf_Width__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Width__c</fullName>
    <label>PDF Width</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>