force-app/main/default/objects/PDF_ESignature_Field__c/fields/Pdf_Y__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Y__c</fullName>
    <label>PDF Y</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>