force-app/main/default/objects/PDF_ESignature_Field__c/fields/Signer_Number__c.field-meta.xml
<CustomField>
    <fullName>Signer_Number__c</fullName>
    <label>Signer Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>