force-app/main/default/objects/PDF_ESignature_Field__c/fields/Width_Percent__c.field-meta.xml
<CustomField>
    <fullName>Width_Percent__c</fullName>
    <label>Width Percent</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>