force-app/main/default/objects/PDF_ESignature_Field__c/fields/X_Percent__c.field-meta.xml
<CustomField>
    <fullName>X_Percent__c</fullName>
    <label>X Percent</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>